Add two more experiements

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 secrets/*
+01-practical_blog/bbc-experiment/requests-capture-approach/*
+01-practical_blog/powells-experiment/requests-capture-approach/*
